08_Networking/36-04_Blue_Green/webstore-gateway.yaml
# Exercise 36-04 v3.3.0
#
# envoy-gateway.yaml (Assuming MetalLB is already installed)
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: webstore-gc
  namespace: dev-ns
spec:
  gatewayClassName: envoy-gc # Or your specific class name
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        # Use 'All' for simplicity in testing, otherwise use 'Selector'
        from: All
